log
Thu May 12 15:11:18 UTC 2022: 
 tests:  0|5
total_score: 0/70
fc841e0
Thu May 12 15:19:22 UTC 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:16: error: implicit declaration of function ‘is_value’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
             if(is_value(n)) {
                ^~~~~~~~
                is_valid
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8840d07
Thu May 12 15:19:30 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fbfd954
Thu May 12 15:19:54 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
1442205
Thu May 12 15:20:08 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
28310c1
Thu May 12 15:26:53 UTC 2022: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:3: error: expected identifier or ‘(’ before ‘for’
   for (int i = 0; i <= 9; i++) {
   ^~~
sudoku.c:49:19: error: ‘i’ undeclared (first use in this function)
   for (int i = 0; i <= 9; i++) {
                   ^
sudoku.c:49:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:30: error: expected ‘;’ before ‘)’ token
   for (int i = 0; i <= 9; i++) {
                              ^
sudoku.c:49:30: error: expected statement before ‘)’ token
sudoku.c:52:5: error: expected expression before ‘}’ token
     }
     ^
Compilation failed
ce2ea4d
Thu May 12 15:27:13 UTC 2022: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3058bff
Thu May 12 15:38:48 UTC 2022: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: variable ‘k’ set but not used [-Werror=unused-but-set-variable]
   int k;
       ^
cc1: all warnings being treated as errors
Compilation failed
d1d567b
Thu May 12 15:38:57 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:9: error: ‘k’ undeclared (first use in this function)
         k = n->sudo[i][j];
         ^
sudoku.c:55:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4d5b4fe
Thu May 12 15:39:15 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: variable ‘k’ set but not used [-Werror=unused-but-set-variable]
   int k;
       ^
cc1: all warnings being treated as errors
Compilation failed
2a3f9e5
Thu May 12 15:39:38 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: variable ‘k’ set but not used [-Werror=unused-but-set-variable]
   int k = 0;
       ^
cc1: all warnings being treated as errors
Compilation failed
77cdf18
Thu May 12 15:40:51 UTC 2022: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
20d770f
Thu May 12 15:41:30 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3671842
Thu May 12 15:43:19 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:50:3: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   printf("%d", n->sudo[i][j]);
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
sudoku.c:50:3: error: ‘j’ is used uninitialized in this function [-Werror=uninitialized]
cc1: all warnings being treated as errors
Compilation failed
90b8abf
Thu May 12 15:43:34 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ee51b3e
Thu May 12 15:46:12 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4d17b88
Thu May 12 15:47:05 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e11e963
Thu May 12 16:00:59 UTC 2022: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:7: error: redeclaration of ‘k’ with no linkage
   int k=4 , p;
       ^
sudoku.c:48:13: note: previous declaration of ‘k’ was here
   int i, j, k;
             ^
sudoku.c:49:9: error: variable ‘vec’ set but not used [-Werror=unused-but-set-variable]
   int * vec;
         ^~~
sudoku.c:48:10: error: unused variable ‘j’ [-Werror=unused-variable]
   int i, j, k;
          ^
sudoku.c:48:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i, j, k;
       ^
cc1: all warnings being treated as errors
Compilation failed
d8bbf63
Thu May 12 16:01:12 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:9: error: variable ‘vec’ set but not used [-Werror=unused-but-set-variable]
   int * vec;
         ^~~
cc1: all warnings being treated as errors
Compilation failed
87a8339
Thu May 12 16:01:25 UTC 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
98455a5
Thu May 12 16:03:17 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:8: error: ‘k’ undeclared (first use in this function)
   for (k = 0; k <= 9; k++) {
        ^
sudoku.c:51:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4a21861
Thu May 12 16:03:50 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:8: error: ‘k’ undeclared (first use in this function)
   for (k = 0; k <= 9; k++) {
        ^
sudoku.c:52:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a0aa005
Thu May 12 16:04:15 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
297120e
Thu May 12 16:05:25 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
dd92c0f
Thu May 12 16:05:38 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8f1435a
Thu May 12 16:05:56 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5f13492
Thu May 12 16:06:45 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
584735f
Thu May 12 16:07:39 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e82d5ec
Thu May 12 16:09:39 UTC 2022: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
d806217
Thu May 12 16:13:40 UTC 2022: 
 sudoku.c | 20 +++++++++++++++-----
 1 file changed, 15 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i, k;
       ^
cc1: all warnings being treated as errors
Compilation failed
8798433
Thu May 12 16:14:01 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i, k;
       ^
cc1: all warnings being treated as errors
Compilation failed
5bb3932
Thu May 12 16:14:32 UTC 2022: 
 sudoku.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:13: error: unused variable ‘j’ [-Werror=unused-variable]
         int j = 3 * (k%3) + (p%3) ;
             ^
sudoku.c:55:13: error: unused variable ‘i’ [-Werror=unused-variable]
         int i = 3 * (k/3) + (p/3) ;
             ^
sudoku.c:49:9: error: variable ‘vec’ set but not used [-Werror=unused-but-set-variable]
   int * vec = (int *) calloc (10, sizeof(int));
         ^~~
cc1: all warnings being treated as errors
Compilation failed
eb33962
Thu May 12 16:14:41 UTC 2022: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:9: error: unused variable ‘vec’ [-Werror=unused-variable]
   int * vec = (int *) calloc (10, sizeof(int));
         ^~~
cc1: all warnings being treated as errors
Compilation failed
5b0a1b9
Thu May 12 16:14:47 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
60ece33
Sat May 14 02:22:48 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:7: error: expected expression before ‘}’ token
       }
       ^
Compilation failed
5e7c28a
